@@ -194,8 +194,15 @@ size_t ICACHE_FLASH_ATTR rest_network_put_handler(struct http_request *request)
 	if (request->response.state == HTTP_STATE_STATUS)
 	{
 		ret = http_send_status_line(request->connection, 204);
-		//Send end of headers.
-		ret += http_send(request->connection, "\r\n", 2);
+		request->response.state = HTTP_STATE_HEADERS;
+	}
+	else if (request->response.state == HTTP_STATE_HEADERS)
+	{
+		ret += http_send(request->connection, "\r\n", 2);		
+		request->response.state = HTTP_STATE_MESSAGE;
+	}
+	else if (request->response.state == HTTP_STATE_MESSAGE)
+	{
 		debug(" Network selected: %s.\n", request->message);
 		
 		jsonparse_setup(&state, request->message, os_strlen(request->message));
